<resources>
    <string name="app_name">Wanted Man</string>

    //EndGameMenu//Eddy----------------------
    <string name="Win">You Win</string>
    <string name="Lose">You Lose</string>
    <string name="Menu">Menu</string>

    //Menu//Eddy------------------------------
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="title_activity_game">Game</string>

    //Choice//Fatima------------------------------
    <string name="Rank">Rank:</string>
    <string name="Week">Week:</string>
    <string name="CurrentBalance">Current Balance:</string>
    <string name="PreviousBalance">Previous Balance:</string>
    <string name="ProgressButton">+1 Progress</string>
    <string name="BalanceButton">Balance</string>



    //Keyboard//Jintze------------------------
    <string name="q">q</string>
    <string name="w">w</string>
    <string name="e">e</string>
    <string name="r">r</string>
    <string name="t">t</string>
    <string name="y">y</string>
    <string name="u">u</string>
    <string name="i">i</string>
    <string name="o">o</string>
    <string name="p">p</string>

    <string name="a">a</string>
    <string name="s">s</string>
    <string name="d">d</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>

    <string name="z">z</string>
    <string name="x">x</string>
    <string name="c">c</string>
    <string name="v">v</string>
    <string name="b">b</string>
    <string name="n">n</string>
    <string name="m">m</string>

    <string name="MenuButton">MenuButton</string>

    <string name="winOrLose">GameOver</string>

</resources>
