<merge xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        >


        <LinearLayout
            android:id="@+id/topKeyBoardRow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/keyboard"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/LetterQ"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/q"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterW"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/w"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterE"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/e"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterR"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/r"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterT"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/t"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterY"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/y"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterU"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/u"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterI"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/i"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterO"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/o"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterP"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/p"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />


        </LinearLayout>

        <LinearLayout

            android:id="@+id/secondKeyboardRow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/keyboard"
            android:layout_below="@+id/topKeyBoardRow"
            >

            <Button
                android:id="@+id/LetterA"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/a"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterS"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/s"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterD"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/d"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterF"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/f"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterG"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/g"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterH"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/h"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterJ"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/j"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterK"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/k"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterL"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/l"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/keyboard"
            android:layout_below="@+id/secondKeyboardRow">

            <Button
                android:id="@+id/LetterZ"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/z"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterX"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/x"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterC"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/c"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterV"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/v"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterB"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/b"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterN"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/n"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/LetterM"
                android:layout_width="@dimen/letterButtonWidth"
                android:layout_height="@dimen/letterButtonHeight"
                android:text="@string/m"
                android:textSize="17sp"
                android:textColor="@color/background"
                android:textStyle="bold"
                />
        </LinearLayout>

    </RelativeLayout>

</merge>