<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@drawable/poster"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/DifficultyButtons"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/DifficultyButtons"
        >


        <Button
            android:id="@+id/EasyDifficultySelect"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/Easy" />

        <Button
            android:id="@+id/MediumDifficultySelect"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/Medium" />

        <Button
            android:id="@+id/HardDifficultySelect"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/Hard" />
        <Button
            android:id="@+id/StoryMode"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="Story" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/StoryIntro"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:text="Intro"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/StoryPlay"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:text="Play"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>